--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit",
-    "build": "node build/build.js"
+    "build": "node build/build.js && npm run pages",
+    "pages": "gh-pages -d dist"
+
   },
   "dependencies": {
+    "gh-pages": "^1.2.0",
     "https": "^1.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
