Edit package json

--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "author": "Andy Tran <andy8tran@gmail.com>",
   "private": true,
   "scripts": {
-    "dev":
-      "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "test:watch": "jest --watch --config test/unit/jest.conf.js --coverage",
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit",
-    "build": "node build/build.js && npm run pages",
+    "build": "node build/build.js",
     "pages": "gh-pages -d dist"
   },
   "dependencies": {
