--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "pages": "gh-pages -d dist"
   },
   "dependencies": {
+    "at-ui": "^1.3.3",
+    "at-ui-style": "^1.5.1",
     "gh-pages": "^1.2.0",
     "https": "^1.0.0",
     "vue": "^2.5.2",
@@ -80,5 +82,9 @@
     "node": ">= 6.0.0",
     "npm": ">= 3.0.0"
   },
-  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"]
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
