--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "at-ui": "^1.3.3",
     "at-ui-style": "^1.5.1",
+    "babel-plugin-component": "^1.1.1",
+    "babel-plugin-import": "^1.8.0",
     "gh-pages": "^1.2.0",
     "https": "^1.0.0",
     "vue": "^2.5.2",
