--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "presets": [
     [
-      "env",
+      "@babel/env",
       {
         "modules": false,
         "targets": {
@@ -9,11 +9,12 @@
         }
       }
     ],
-    "stage-2"
+    "@babel/preset-flow"
   ],
   "plugins": [
-    "transform-vue-jsx",
-    "transform-runtime",
+    "@babel/plugin-syntax-jsx",
+    "@babel/plugin-transform-runtime",
+    "@babel/plugin-proposal-class-properties",
     [
       "import",
       {
@@ -24,8 +25,13 @@
   ],
   "env": {
     "test": {
-      "presets": ["env", "stage-2"],
-      "plugins": ["transform-vue-jsx", "transform-es2015-modules-commonjs", "dynamic-import-node"]
+      "presets": ["@babel/env"],
+      "plugins": [
+        "transform-es2015-modules-commonjs",
+        "dynamic-import-node",
+        "@babel/plugin-syntax-jsx",
+        "@babel/plugin-proposal-class-properties"
+      ]
     }
   }
 }
