--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "pages": "gh-pages -d dist"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.1.0",
+    "@babel/runtime": "^7.1.2",
     "at-ui": "^1.3.3",
     "at-ui-style": "^1.5.1",
+    "babel-core": "^7.0.0-bridge",
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-import": "^1.8.0",
     "gh-pages": "^1.2.0",
@@ -26,19 +29,20 @@
     "web-audio-test-api": "^0.5.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-syntax-jsx": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-flow": "^7.0.0",
     "@vue/test-utils": "^1.0.0-beta.16",
     "autoprefixer": "^7.1.2",
-    "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-jest": "^21.0.2",
-    "babel-loader": "^7.1.1",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.0-beta.6",
     "babel-plugin-dynamic-import-node": "^1.2.0",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
-    "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
